added night mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <div class="main">
     <div class="unitConverter">
         <div class="header">
+            <div class="ico">
+                <img src="darkTheme/moon.png" id="icon" onclick="darkTheme()"/>
+            </div>
             <h1>Metric/Imperial Unit Conversion</h1>
             <input type="text" id="input-el"/>
             <div class="convertBtn">
